feat: Configure Campus Connect for Render deployment
- Add comprehensive render.yaml configuration
- Update Django settings for production
- Add health check endpoint for monitoring
- Update requirements.txt with production dependencies
- Create deployment guide and environment templates
- Configure WhiteNoise for static file serving
- Add PostgreSQL database configuration

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,3 +11,8 @@ google-auth-oauthlib>=0.7.0
 pyjwt>=2.6
 python-dotenv>=1.0.0
 gunicorn>=20.1.0
+
+# Production dependencies
+psycopg2-binary>=2.9.0
+whitenoise>=6.0.0
+dj-database-url>=1.0.0
